[tool.poetry]
name = "vargur-sdk"
version = "0.0.0"  # This will be ignored and replaced by poetry-dynamic-versioning
description = "EVE ONLINE - Vargur API SDK"
authors = ["MelonCafe <contact@siege0green.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/meloncafe/vargur-sdk"
repository = "https://github.com/meloncafe/vargur-sdk"
documentation = "https://vargur-sdk.siege-green.com"
keywords = ["eve online", "sdk", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = "^(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)$"
format = "{major}.{minor}.{patch}"
bump = "patch"
strict = false
dirty = false
metadata = false
version-file = "vargur_sdk/__init__.py"

[tool.vargur-sdk]
custom_domain = "vargur-sdk.siege-green.com"